Smoothed the section 2 trimming

--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -166,7 +166,7 @@ Following up on our corpus findings, we then explore the idea that contextual pr
 
 \ndg{Oy, this section is still long and meandering. it should be half this length.}
 
-Some gradable predicates (e.g., \emph{heavy}) are transparently ambiguous in plural predications. Under a distributive reading, \Next[a], the relevant property gets ascribed to each member of the plural subject. Under a collective reading, \Next[b], we ascribe the property to the subject as a whole, commenting on the total weight of the boxes; many light boxes may together count as heavy \citep{scha1984}.
+Complaisantly collective gradable predicates like \emph{heavy} (also \emph{expensive}, \emph{voluminous}) are transparently ambiguous in plural predications. Under a distributive reading, \Next[a], the relevant property gets ascribed to each member of the plural subject. Under a collective reading, \Next[b], we ascribe the property to the subject as a whole, commenting on the total weight of the boxes; many light boxes may together count as heavy \citep{scha1984}.
 
 \ex. The boxes are heavy.
 \a. The boxes each are heavy. \hfill \textsc{distributive}
@@ -200,7 +200,7 @@ Something about these predicates or the properties they name must influence or d
 %Not all predicates are so permissive in their interpretations: \textit{the boxes are big} is said to communicate only about individual box size; the collective interpretation whereby speakers communicate about total set size is claimed to be absent (or at least extremely hard to come by). Other size and shape predicates are said to behave similarly.
 
 %Understanding why (and whether) stubbornly distributive predicates like \emph{big} pattern separately from what we will call ``complaisantly collective'' predicates like \emph{heavy} requires a closer look at the differences between these classes of predicates. 
-The salient different between complaisantly collective \emph{heavy} and stubbornly distributive \emph{big} seems to be the contextual predictability of the collective properties they name: the former names a maximally stable and predictable property, collective weight, whereas the latter names a collective property that could change with every new arrangement of the individuals said to hold it. To change the collective weight of a set, one would have to change the weight of an individual member. Not so for collective size, which may change {without} any change to the size of an individual member. The instability inherent to the collective properties named by stubbornly distributive predicates, instability that we are attuned to given our knowledge of the broader world context (i.e., knowledge of how the properties behave), supplies a ready split between these two classes of predicates. Where a property is less predictable on the basis of context, collective interpretations are noisier---they require more coordination between speakers and listeners to arrive at the same judgments about the property of interest. When coordination fails, miscommunication arises.
+The salient different between complaisantly collective \emph{heavy} and stubbornly distributive \emph{big} seems to be the contextual predictability of the collective properties they name: the former names a maximally stable and predictable property, collective weight; to change the collective weight of a set, one would have to change the weight of an individual member. In contrast, \emph{big} names a collective property that could change with every new arrangement of the individuals said to hold it. The instability inherent to the collective properties named by stubbornly distributive predicates, instability that we are attuned to given our knowledge of the broader world context (i.e., knowledge of how the properties behave), supplies a ready split between these two classes of predicates. Where a property is less predictable on the basis of context, collective interpretations are noisier---they require more coordination between speakers and listeners to arrive at the same judgments about the property of interest. When coordination fails, miscommunication arises.
 
 %Consider the complaisantly collective predicate \emph{heavy}, which names the property of being heavy. 
 %With a plural subject under a collective construal, \emph{heavy} comments on total set weight.  Suppose we encounter a set of boxes piled one on top of the other. Those boxes will have a collective weight, and depending on that weight those boxes may or may not count as collectively heavy. Now, suppose we encounter that same set of boxes, this time lined up one next to the other. Despite changing the physical arrangement of the set of boxes, their weight remains the same.  Collective weight is a stable property of sets. Another complaisantly collective predicate, \emph{voluminous}, behaves similarly: the volume of a set of objects remains unchanged despite varying physical arrangement. So too for \emph{expensive} and any other complaisantly collective gradable predicate: the collective property is regular and predictable on the basis of context; rearranging the members of a plurality has no effect on the collective property itself.
@@ -212,13 +212,13 @@ The salient different between complaisantly collective \emph{heavy} and stubborn
 %We appear to have a continuum of stubborn distributivity, or, perhaps better put, a continuum of collectivity for gradable predicates. At issue is the contextual predictability of the collective property these predicates name, which determines how noisy the collective interpretations will be. Where a property is less predictable on the basis of context, collective interpretations are noisier---they require more coordination between speakers and listeners to arrive at the same judgments about the property of interest. When coordination fails, miscommunication arises. %In other words, our---speakers' and listeners'---judgments about the truth of a collective interpretation might not align for stubbornly distributive predicates if we do not encounter the same arrangement of individuals. 
 %Noisy collective interpretations are less useful at communicating the speaker's intended message; they should therefore be less likely. With complaisantly collective predicates, the named properties are maximally predictable and therefore their collective interpretations are minimally noisy. These interpretations are therefore more likely.
 
-Here is the hypothesis: collective interpretations are susceptible to varying amounts of noise depending on the contextual predictability of the property at issue; less predictable collective properties yield noisier collective interpretations because judgments by speakers and listeners might not align. Language is used to communicate. Speakers aspire toward clarity in this process of communication. With a stubbornly distributive predicate, the property a speaker makes reference to might change depending on the arrangement of the things said to hold it. To communicate effectively and avoid possible confusion, collective interpretations should be avoided in the case of such noisy predicates; distributive interpretations are the safe bet. In other words, collective interpretations become less likely as contextual predictability of the collective property----that is, the retrievability of the intended message---decreases. 
+Here is the hypothesis: collective interpretations are susceptible to varying amounts of noise depending on the contextual predictability of the property at issue; less predictable collective properties yield noisier collective interpretations because judgments by speakers and listeners might not align. Language is used to communicate. Speakers aspire toward clarity in this process of communication. With a stubbornly distributive predicate, the property a speaker makes reference to might change depending on the arrangement of the things said to hold it. To communicate effectively and avoid possible confusion, collective interpretations should be avoided in the case of such noisy predicates; distributive interpretations are the safe bet. In other words, collective interpretations become more likely as contextual predictability of the collective property----that is, the retrievability of the intended message---increases. 
 
 %The introduction of structure into, or the removal of variability from the context of predication should increase the viability of collective interpretations: 
 If physical arrangements are less likely to change, collective properties become more predictable on the basis of context, and so collective interpretations become less noisy. As a result, these interpretations become more useful, and therefore more likely. This reasoning underlies the intuition, which we test experimentally, that if sets of boxes always assume the same arrangement (say, they are always stacked on top of each other), suddenly using stubbornly distributive \emph{big} to discuss their collective size feels much more natural.
 Finding such a connection between contextual predictability of collective properties and rates of collective interpretations for stubbornly distributive predicates, we would have evidence that the phenomenon of stubborn distributivity is not a simple lexical distinction, but rather emerges as a result of rational inferences between speakers and listeners as they endeavor to communicate efficiently. %Moreover, given that complaisantly collective predicates name properties that are already maximally predictable, we should not expect to be able to increase the contextual predictability of their collective properties and thereby increase their rates of collective interpretations.
 
-Once we consider the complex interaction between speakers and listeners in the disambiguation of plural predication, we open the door to the influence of context at many levels. We have seen how properties of the broader world context (i.e., contextual predictability of collective properties) might serve to disambiguate between stubbornly distributive and complaisantly collective predicates. We have also encountered, albeit indirectly, the influence of the local linguistic context on this disambiguation: different predicates privilege different interpretations by virtue of the contextual predictability of the properties they name (cf.~\emph{big} vs.~\emph{tall} vs.~\emph{heavy}). Also at play in the local linguistic context are the nouns that serve as the subjects to these predicates. As with the properties named by  predicates, the objects named by  subject nouns might affect contextual predictability by virtue of how regularly they instantiate in the world. If we could find objects that instantiate in regular physical arrangements (e.g., shelves or waves) or with no physical arrangement at all (e.g., numbers or ideas), we might expect stubbornly distributive predicates to more readily admit collective interpretations when the nouns that name these objects serve as subject. %As with contextual predictability, we test this intuition experimentally below.  
+Once we consider the complex interaction between speakers and listeners, we open the door to the influence of context at many levels. We have seen how properties of the broader world context (i.e., contextual predictability of collective properties) might serve to disambiguate between stubbornly distributive and complaisantly collective predicates. We have also encountered, albeit indirectly, the influence of the local linguistic context on this disambiguation: different predicates privilege different interpretations by virtue of the contextual predictability of the properties they name (cf.~\emph{big} vs.~\emph{heavy}). Also at play in the local linguistic context are the nouns that serve as the subjects to these predicates. As with the properties named by  predicates, the objects named by  subject nouns might affect contextual predictability by virtue of how regularly they instantiate in the world. If we could find objects that instantiate in regular physical arrangements (e.g., shelves or waves) or with no physical arrangement at all (e.g., numbers or ideas), we might expect stubbornly distributive predicates to more readily admit collective interpretations when the nouns that name these objects serve as subject. %As with contextual predictability, we test this intuition experimentally below.  
 
 %Contextual predictability affects availability of collective interpretations to the extent that speakers and listeners attend to each other as they communicate: unpredictable properties are poor candidates for efficient communication, given the amount of increased coordination they necessitate. Once we start 
 One last level of context remains: the immediate discourse context, specifically properties of the speakers and listeners themselves. As with world and linguistic context, this factor determines not the possible, but the \emph{probable} interpretations of plural predications: changing the speaker's epistemic state ought to influence the resulting disambiguation between distributive and collective interpretations. 
@@ -228,7 +228,7 @@ If a speaker lacks evidence that would verify a specific interpretation, and if 
 %Conversely, we may privilege distributive interpretations by highlighting distributive knowledge, for example by watching a speaker pick up boxes one at a time. Like contextual predictability, the influence of speaker knowledge should succeed to the extent that speakers and listeners are reasoning about each other as they use language to communicate. 
 %Note that because properties of physical extent are visually assessable (and therefore accessible), we cannot manipulate speakers' knowledge of them so easily. If a speaker can see the boxes, he can see both their individual sizes and shapes, as well as their collective size and shape. Contrary to the predictions of contextual predictability, here we would expect to find an effect of speaker access to knowledge for complaisantly collective, but not stubbornly distributive predicates.
 
-To test these various predictions concerning the role of context in plural predication, we must first establish a way of studying plural predication experimentally; that is, a way to unambiguously access distributive vs.~collective interpretations. In Expt.~1, we show that the particles \emph{each} and \emph{together} reliably disambiguate plural predication. %In Expt.~2, we apply this disambiguation method to a broad range of linguistic contexts from naturally-occurring examples of plural predication from corpora. In Expt.~3, we again employ this disambiguation method, this time directly manipulating contextual predictability and speaker access to knowledge.
+To test these various predictions concerning the role of context in plural predication, we must first establish a way of studying plural predication experimentally; that is, a way to unambiguously access distributive vs.~collective interpretations. To that end, in Expt.~1, we show that the particles \emph{each} and \emph{together} reliably disambiguate plural predication. %In Expt.~2, we apply this disambiguation method to a broad range of linguistic contexts from naturally-occurring examples of plural predication from corpora. In Expt.~3, we again employ this disambiguation method, this time directly manipulating contextual predictability and speaker access to knowledge.
 
 \section{Experiment 1: Validating the paraphrase methodology}
 
