--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -306,7 +306,8 @@ But before we manipulate contextual predictability and speaker knowledge directl
 \section{Experiment 2: Naturally-occurring examples}
 
 In Expt.~1, we used a reference task to validate disambiguating paraphrases as a probe of interpretations of plural predications. 
-In the next experiment we use the paraphrase methodology to evaluate natural plural predications gathered from corpora. We aim to both extend our understanding of distributive vs.~collective preferences to predicates beyond \emph{big/tall/heavy}, and explore the effect of linguistic context: how the head noun affects this preference.
+We next use the paraphrase methodology to evaluate natural plural predications gathered from corpora. We aim to both extend our understanding of distributive vs.~collective preferences to predicates beyond \emph{big/tall/heavy}, and explore the effect of linguistic context: how the head noun affects this preference.
+\ndg{better motivate: we want to see whether there is a clear distinction among predicate classes, we want to see whether noun affects interpretation, etc}
 
 %However, by providing potential referents, we gave participants specific and salient physical arrangements (e.g., box stacks) against which to evaluate interpretations of predicates. Here, we move away from specific arrangements and use the disambiguating paraphrases from Expt.~1 to directly probe interpretations of plural predications.
 %We extend beyond big/tall/heavy boxes, to look at frequent linguistic contexts for plural predication. Doing so provides insight into the role the local linguistic context plays in the disambiguation of plural predication.
@@ -370,24 +371,12 @@ A linear mixed effects model predicting collective endorsement rates by subject 
 
 \ndg{we should have some analysis of the other seven predicates -- maybe there is an overall test of whether noun matters? or do tests within predicates (add significance stars to the figure...).}
 
-\subsubsection{Discussion}
-
-We have extended our paraphrase methodology beyond a simple reference task, using naturally-occurring examples of plural predications.
-% Our goals here were modest: to understand better the terrain of interpretation preferences for plural predications, without special attention to particular classes of predicates or subjects. Participants demonstrated full use of the paraphrase endorsement rating scales provided. Moreover, 
-The pattern of ratings sheds some light on the interpretation of plural predication. Perhaps most obvious is the absence of clear groups of predicates: one would be hard-pressed to read stubborn distributivity (or complaisant collectivity) off the gradient of ratings in Fig.~\ref{sentence-coll}.
-
-The fact that disambiguation preferences differ by subject noun, not only by predicate further shifts the theoretical focus from lexical classes of predicates. If a plural predication can be more or less collective depending on the subject, then we must look at least partly to context in order to understand interpretation preferences.
-
-%After considering the full set of sentences, we narrowed our focus to those predicates occurring in more than one sentence (i.e., with different subject nouns). Narrower still, 
-
-We highlighted the case of stubbornly distributive \emph{small}, showing that the subject \emph{numbers} yielded higher rates of collective endorsement than other subject nouns. One possible explanation for the exceptional behavior of \emph{numbers} is thus: The collective size of numbers is naturally their sum, 
-%Faced with the task of evaluating the relative size of a hypothetical set of numbers, participants converge on a single strategy, namely summing them up. In other words, the collective size of numbers 
-which is relatively predictable in context---more so than the collective size of children (determined by, e.g., height, weight, age, etc.) or of rooms and classes (determined by, e.g., number of occupants, seating capacity, overall volume, etc.). Moreover, numbers do not physically instantiate, so the contextual predictability of their collective size will not suffer from potential variability in their arrangement. 
-We explore this idea further in Expt.~2b, focussing on the theoretically relevant set of predicates: \emph{big}, \emph{heavy}, and \emph{tall}. \ndg{why?}
+%\subsubsection{Discussion}
 
 \subsection{Experiment 2b: \emph{big}, \emph{heavy}, \emph{tall}}
 
-We next shift our sights to predicates more directly of interest to the current investigation of stubborn distributivity: \emph{big}, \emph{heavy}, and \emph{tall}. Due to the limited number of instances of plural predication with these predicates in the British National Corpus, we use instead the much larger Google Books Corpus \citep{davies2011}.
+The three predicates \emph{big}, \emph{heavy}, and \emph{tall} are of particular interest because they come from both supposed lexical categories (stubborn and complaisant), while lending themselves to direct manipulation (as in Expt.~1) because they depend on physical properties.
+Due to the limited number of instances of plural predication with these predicates in the British National Corpus, we use instead the much larger Google Books Corpus \citep{davies2011} to look at them in more detail.
 
 \subsubsection{Participants}
 
@@ -404,28 +393,36 @@ heavy:& bags, lids, loads, men, trees\\
 tall:& buildings, offspring, plants, trees, windows
 \end{tabular}	
 
-As with Expt.~2a, participants rated disambiguating paraphrases of the resulting sentences. Again, we look only at responses to the 15 utterances from the corpus that participants indicated made sense to them.
+As with Expt.~2a, participants judged whether the resulting sentences made sense and rated disambiguating paraphrases of each. 
 
-\subsubsection{Predictions}
-
-Given that \emph{heavy} has been described as complaisantly collective, we should find greater rates of collective interpretation endorsements for this predicate. For stubbornly distributive \emph{big}, we should find much lower rates of collective interpretations. If the relatively high rates of collective interpretations for \emph{tall} in Expt.~1 stemmed from the availability of a specific physical arrangement, we should find lower rates of collective interpretation here, where no arrangements are specified.
-
-If contextual predictability influences the visibility and thus viability of collective interpretations, we should find that noun-predicate pairs that plausibly implicate contextually predictable collective properties---as was the case with \emph{small numbers} in Expt.~2a---yield greater rates of collective interpretations. For example, with \emph{big waves}, the physical instantiation of waves is likely more regular than that of, say, buildings or plants. We might therefore expect greater rates of collective interpretations for \emph{big waves} compared to the other sentences with \emph{big}.
-
-We might also expect to find variation by subject noun that tracks speakers' access to knowledge. That is, if a speaker is more likely to lack evidence for a distributive or a collective interpretation for a specific noun-predicate pair, we should find greater rates of the competing interpretations for that pair. For example, with \emph{heavy loads}, it is unlikely that the speaker carried all of the loads together, so the speaker would lack direct access to knowledge about the collective weight of those loads; we would therefore expect lower rates of collective interpretations as the probability of epistemic access to total, collective weight decreases.
+%\subsubsection{Predictions}
+%
+%\ndg{i don't think we need this section. move any relevant motivation to start of expt....}
+%
+%Given that \emph{heavy} has been described as complaisantly collective, we should find greater rates of collective interpretation endorsements for this predicate. For stubbornly distributive \emph{big}, we should find much lower rates of collective interpretations. If the relatively high rates of collective interpretations for \emph{tall} in Expt.~1 stemmed from the availability of a specific physical arrangement, we should find lower rates of collective interpretation here, where no arrangements are specified.
+%
+%If contextual predictability influences the visibility and thus viability of collective interpretations, we should find that noun-predicate pairs that plausibly implicate contextually predictable collective properties---as was the case with \emph{small numbers} in Expt.~2a---yield greater rates of collective interpretations. For example, with \emph{big waves}, the physical instantiation of waves is likely more regular than that of, say, buildings or plants. We might therefore expect greater rates of collective interpretations for \emph{big waves} compared to the other sentences with \emph{big}.
+%
+%We might also expect to find variation by subject noun that tracks speakers' access to knowledge. That is, if a speaker is more likely to lack evidence for a distributive or a collective interpretation for a specific noun-predicate pair, we should find greater rates of the competing interpretations for that pair. For example, with \emph{heavy loads}, it is unlikely that the speaker carried all of the loads together, so the speaker would lack direct access to knowledge about the collective weight of those loads; we would therefore expect lower rates of collective interpretations as the probability of epistemic access to total, collective weight decreases.
 
 \subsubsection{Results}
 
-Fig.~\ref{bhtcoll} plots average collective endorsement ratings for each of the three predicates grouped by their subjects.
+We again look only at responses to the utterances that participants indicated made sense to them. \ndg{again, why?}
 
-\begin{figure}[h!]
+\ndg{here, but also in other expts, should do some analysis of the distributive paraphrase... it's weird to just leave it out. if it is truly redundant with the collective measure, how about quantifying that? ie. report their correlation or such.}
+
+Fig.~\ref{bhtcoll} plots average collective endorsement ratings for each of the three predicates grouped by their subjects.
+%
+\begin{figure}[htb]
 	\centering
 	\includegraphics[width=.85\linewidth]{plots/bht_plot2.eps}
 	\vspace{0pt}
 	\caption{Collective paraphrase endorsement rates for different nouns serving as the subject to the predicates \emph{big}, \emph{heavy}, and \emph{tall} (Expt.~2b).} \label{bhtcoll}
 \end{figure}
-
+%
 To compare the predicates with each other, we fit a linear mixed effects model predicting collective endorsement by predicate, with random intercepts for participants and nouns, and random slopes for participants. The predicate predictor was dummy coded with \emph{heavy} as the reference level. There were main effects for both contrasts, such that \emph{big} ($\beta=-0.22$, $SE=0.07$, $t=-3.24$, $p<0.01$) and \emph{tall} ($\beta=-0.20$, $SE=0.06$, $t=-3.20$, $p<0.01$) led to lower rates of collective endorsement. Next, we examine the behavior of the subject nouns for each predicate in turn.
+
+\ndg{it's not clear to me that the ensuing are the most useful analyses to do... we want to know how judgements vary by noun. it is relevant to know if any nouns differ within predicate, and also whether the ranges of the predicates overlap....}
 
 Starting with \emph{tall}, we fit a linear mixed effects model predicting collective endorsement by subject noun, with random intercepts for participants and nouns, and random slopes for participants. The subject noun predictor was dummy coded with \emph{trees} as the reference level (i.e., the subject with the highest average collective endorsement rating). Compared to \emph{trees}, we do not find an effect of the contrast with \emph{plants} ($\beta=0.00$, $SE=0.06$, $t=-0.07$, $p=0.95$), \emph{offspring} ($\beta=-0.03$, $SE=0.06$, $t=-0.55$, $p=0.59$), \emph{buildings} ($\beta=-0.06$, $SE=0.06$, $t=-1.00$, $p=0.32$), or \emph{windows} ($\beta=-0.09$, $SE=0.06$, $t=-1.52$, $p=0.13$). In other words, \emph{tall}'s subjects behave similarly in their general resistance to collective interpretation. 
 
@@ -434,6 +431,23 @@ Turning to \emph{big}, we performed a similar analysis, this time dummy coding \
 Finally, \emph{heavy}; here, \emph{bags} received the highest collective endorsement ratings, so we coded it as the reference level. The contrast with \emph{lids} was not significant ($\beta=-0.08$, $SE=0.08$, $t=-1.04$, $p=0.30$), the contrast with \emph{trees} was marginally significant ($\beta=-0.15$, $SE=0.08$, $t=-1.93$, $p=0.06$), and the contrasts with \emph{loads} ($\beta=-0.24$, $SE=0.08$, $t=-3.15$, $p<0.01$) and \emph{men} ($\beta=-0.25$, $SE=0.08$, $t=-3.56$, $p<0.01$) were significant. In other words, we find similarly high ratings for \emph{bags} and \emph{lids}, intermediate ratings for \emph{trees}, and similarly low ratings for \emph{loads} and \emph{men}.
 
 \subsubsection{Discussion}
+
+\ndg{to edit...}
+
+We have extended our paraphrase methodology beyond a simple reference task, using naturally-occurring examples of plural predications.
+% Our goals here were modest: to understand better the terrain of interpretation preferences for plural predications, without special attention to particular classes of predicates or subjects. Participants demonstrated full use of the paraphrase endorsement rating scales provided. Moreover, 
+The pattern of ratings sheds some light on the interpretation of plural predication. Perhaps most obvious is the absence of clear groups of predicates: one would be hard-pressed to read stubborn distributivity (or complaisant collectivity) off the gradient of ratings in Fig.~\ref{sentence-coll}.
+
+The fact that disambiguation preferences differ by subject noun, not only by predicate further shifts the theoretical focus from lexical classes of predicates. If a plural predication can be more or less collective depending on the subject, then we must look at least partly to context in order to understand interpretation preferences.
+
+%After considering the full set of sentences, we narrowed our focus to those predicates occurring in more than one sentence (i.e., with different subject nouns). Narrower still, 
+
+We highlighted the case of stubbornly distributive \emph{small}, showing that the subject \emph{numbers} yielded higher rates of collective endorsement than other subject nouns. One possible explanation for the exceptional behavior of \emph{numbers} is thus: The collective size of numbers is naturally their sum, 
+%Faced with the task of evaluating the relative size of a hypothetical set of numbers, participants converge on a single strategy, namely summing them up. In other words, the collective size of numbers 
+which is relatively predictable in context---more so than the collective size of children (determined by, e.g., height, weight, age, etc.) or of rooms and classes (determined by, e.g., number of occupants, seating capacity, overall volume, etc.). Moreover, numbers do not physically instantiate, so the contextual predictability of their collective size will not suffer from potential variability in their arrangement. 
+We explore this idea further in Expt.~2b, focussing on the theoretically relevant set of predicates: \emph{big}, \emph{heavy}, and \emph{tall}. \ndg{why?}
+
+\ndg{other discussion begins here}
 
 As expected given its status as complaisantly collective, \emph{heavy} yields greater rates of collective paraphrase endorsement. Stubbornly distributive \emph{big} and \emph{tall} pattern together in their resistance to collective interpretations. This finding for \emph{big} aligns with the finding from Expt.~1, where we found a  similar pattern of stubborn distributivity for \emph{big}. For \emph{tall}, however, this finding is at odds with the relatively high rate of acceptance for collective interpretations participants demonstrated in Expt.~1.
 
